set the dropdown index to prevent overlapping

--- a/sass/atoms/dropdowns/_index.scss
+++ b/sass/atoms/dropdowns/_index.scss
@@ -2,6 +2,7 @@
 
 .dropdown {
     position: relative;
+    z-index: 99;
 
     &.disabled {
         .dropdown__search {
